--- a/html/scss/theme/_variables.scss
+++ b/html/scss/theme/_variables.scss
@@ -1,7 +1,7 @@
-$primary-color:#32aebd; /* CYAN */
-$secondary-color:#293c4e; /* BLUE */
+$primary-color:#32aebd; /* CYAN r(50)g(174)b(189) */
+$secondary-color:#293c4e; /* BLUE r(41)g(60)b(78) */
+$orange:#ff6c60;/* r(255)g(108)b(96) */
 $bg-color:#f7f7f7; /* GREY */
-$orange:#ff6c60;
 $green:#37d074;
 $red:#e85458;
 $yellow: #e8cb59;
