--- a/html/scss/theme/_backend.scss
+++ b/html/scss/theme/_backend.scss
@@ -6,12 +6,11 @@ header {
 }
 
 .popup-message {
-	position: relative;
+	position: absolute;
 	overflow: hidden;
-	top: -200px;
 	opacity: 0;
+	top: -200px;
 	z-index: 1;
-
 	margin-top: 0px;
 	margin-bottom: -40px;
 	text-align: center;
@@ -63,6 +62,8 @@ header.show-for-large-up {
 }
 
 .icon-bar {
+	position: relative;
+	z-index: 50;
 	border-bottom: 5px solid $primary-color;
 
 	a label {
