--- a/html/scss/theme/_general.scss
+++ b/html/scss/theme/_general.scss
@@ -136,7 +136,8 @@ main {
 }
 
 .dark-bg {
-	background: url("../img/bg_slider.png") repeat;
+	background: url("../img/bg_slider.png");
+	background-attachment: fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
