--- a/html/scss/theme/_frontend.scss
+++ b/html/scss/theme/_frontend.scss
@@ -392,24 +392,50 @@ a.show {
    Briefing Styles
 ----------------------------------------- */
 
+
+.form-step {
+	border-top: 5px solid $primary-color;
+	border-bottom: 5px solid $primary-color;
+	text-align: center;
+	color: white;
+	margin: 50px 0px 30px 0px;
+
+	h2 {
+		text-transform: uppercase;
+		font-size: 1.6em;
+		font-weight: 300;
+		padding: 25px 0px 25px 0px;
+		color: white;
+		letter-spacing: 2px;
+		line-height: 0px;
+	}
+
+	h3 {
+		font-size: 1.3em;
+		padding: 10px 0px 35px 0px;	
+		color: white;
+		line-height: 0px;
+	}	
+}
+
+h3 {
+	text-align: center;
+}
+
 #form-pagination {
 	.row {
-		max-width: 550px;
+		max-width: 600px;
 	}
 }
 
 #briefing-form {
 	.row {
-		max-width: 650px;
+		max-width: 700px;
+		padding-left: 10px;
 	}
 
-	h2 {
-		text-transform: uppercase;
-		color: $primary-color;
-		font-size: 1.8em;
-		font-weight: 400;
-		text-align: center;
-		padding-top: 30px;
+	.columns {
+		padding-left: 0px;
 	}
 
 	.freestyle {
@@ -419,17 +445,12 @@ a.show {
 
 	}	
 
-	h3 {
-		font-size: 1.3em;
-		padding: 20px 0px;
-		text-align: center;
-	}
-
 	label {
-		font-size: 1em;	
-		padding-top: 15px;
+		font-size: 1.05em;	
+		padding-top: 25px;
 		font-weight: 600;
 	}
+
 
 	.add-comment {
 		float: right;
