--- a/html/scss/theme/_general.scss
+++ b/html/scss/theme/_general.scss
@@ -307,6 +307,13 @@ select
 	box-shadow: none;
 }
 
+select:focus {
+	border: none;
+	background: url("../img/bg_pattern.png") repeat;
+	border: 2px solid $primary-color;
+	box-shadow: none;	
+}
+
 .reveal-modal {
 	input[type=text],
 	textarea[type=text],
@@ -329,11 +336,10 @@ select {
 	margin-top: 10px;
 	border: 2px solid $darkgrey;	
 	padding: 0px;
+	padding-left: 10px;
 }
 
-select:focus {
-	border: 2px solid $primary-color;	
-}
+
 
 span.range-slider-handle {
 	background: $primary-color;
@@ -414,6 +420,12 @@ span.range-slider-handle {
 		font-size: 100%;
 		height: 100%;
 	}
+}
+
+span.required {
+	color: red;
+	font-size: 1.7em;
+	line-height: 0px;
 }
 
 /* -----------------------------------------
