--- a/html/scss/theme/_frontend.scss
+++ b/html/scss/theme/_frontend.scss
@@ -431,7 +431,7 @@ h3 {
 		display: inline-block;
 	}
 	.progress {
-		width: 500px;
+		max-width: 500px;
 		text-align: center;
 		margin: 0px auto;
 		margin-bottom: 10px;
@@ -439,14 +439,6 @@ h3 {
 		
 
 	}
-}
-
-.EffortCount {
-	position: absolute;
-	color: $secondary-color;
-	left: 0;
-	right: 0;
-	top: 10px;
 }
 
 #briefing-form {
@@ -467,7 +459,7 @@ h3 {
 	}	
 
 	label {
-		font-size: 1.05em;	
+		font-size: 1em;
 		padding-top: 25px;
 		font-weight: 600;
 	}
