--- a/html/scss/foundation/components/_global.scss
+++ b/html/scss/foundation/components/_global.scss
@@ -63,7 +63,7 @@ $base-line-height: 150% !default;
 
   @if $active { &:active {
     box-shadow: $shiny-edge-size $shiny-edge-active-color inset; } }
-}
+  }
 
 // @mixins
 //
@@ -82,7 +82,7 @@ $base-line-height: 150% !default;
   -webkit-box-sizing: $type; // Android < 2.3, iOS < 4
 	   -moz-box-sizing: $type; // Firefox < 29
 	        box-sizing: $type; // Chrome, IE 8+, Opera, Safari 5.1
-}
+        }
 
 // @mixins
 //
@@ -140,31 +140,31 @@ $base-line-height: 150% !default;
         top: 50%;
         margin-top: -$width/2;
       }
-    	@if $left {
-    	  left: $left;
-    	}
-    	@else {
-    	  left: ($tabbar-menu-icon-width - $width)/2;
-    	}
-    }
-    @else {
-      top: 50%;
-      margin-top: -($width/2);
-      #{$opposite-direction}: $topbar-link-padding;
-    }
+      @if $left {
+       left: $left;
+     }
+     @else {
+       left: ($tabbar-menu-icon-width - $width)/2;
+     }
+   }
+   @else {
+    top: 50%;
+    margin-top: -($width/2);
+    #{$opposite-direction}: $topbar-link-padding;
+  }
 
-    box-shadow:
-      0 0px 0 $thickness $color,
-      0 $gap + $thickness 0 $thickness $color,
-      0 (2 * $gap + 2*$thickness) 0 $thickness $color;
-    width: $width;
-  }
-  span:hover:after {
-    box-shadow:
-      0 0px 0 $thickness $hover-color,
-      0 $gap + $thickness 0 $thickness $hover-color,
-      0 (2 * $gap + 2*$thickness) 0 $thickness $hover-color;
-  }
+  box-shadow:
+  0 0px 0 $thickness $color,
+  0 $gap + $thickness 0 $thickness $color,
+  0 (2 * $gap + 2*$thickness) 0 $thickness $color;
+  width: $width;
+}
+span:hover:after {
+  box-shadow:
+  0 0px 0 $thickness $hover-color,
+  0 $gap + $thickness 0 $thickness $hover-color,
+  0 (2 * $gap + 2*$thickness) 0 $thickness $hover-color;
+}
 }
 
 // We use this to do clear floats
@@ -221,8 +221,8 @@ $base-line-height: 150% !default;
 }
 
 // We use these as default colors throughout
-$primary-color: #008CBA !default;   // bondi-blue
-$secondary-color: #e7e7e7 !default; // white-lilac
+$primary-color: #32aebd !default;   // bondi-blue
+$secondary-color: #293c4e !default; // white-lilac
 $alert-color: #f04124 !default;     // cinnabar
 $success-color: #43AC6A !default;   // sea-green
 $warning-color: #f08a24 !default;   // carrot
@@ -402,7 +402,7 @@ $cursor-text-value: text !default;
       cursor: $cursor-default-value;
     }
 
-  a:hover { cursor: $cursor-pointer-value; }
+    a:hover { cursor: $cursor-pointer-value; }
 
     // Grid Defaults to get images and embeds to work properly
     img { max-width: 100%; height: auto; }
