--- a/html/scss/foundation/components/_tooltips.scss
+++ b/html/scss/foundation/components/_tooltips.scss
@@ -36,14 +36,14 @@ $tooltip-max-width: 300px !default;
 
     /* Tooltips */
     .has-tip {
-      border-bottom: $has-tip-border-bottom;
+      /*border-bottom: $has-tip-border-bottom;*/
       cursor: $has-tip-cursor-type;
       font-weight: $has-tip-font-weight;
       color: $has-tip-font-color;
 
       &:hover,
       &:focus {
-        border-bottom: $has-tip-border-bottom-hover;
+        /*border-bottom: $has-tip-border-bottom-hover;*/
         color: $has-tip-font-color-hover;
       }
 
