Small Changes Landing-Page

--- a/html/scss/theme/_frontend.scss
+++ b/html/scss/theme/_frontend.scss
@@ -165,6 +165,9 @@ ul {
 		border-top:5px solid $primary-color;
 		text-transform: uppercase;
 	}
+	a.button {
+		width: 230px;
+	}
 }
 
 #poster-img {
